--- a/app/src/main/res/layout/repo_item.xml
+++ b/app/src/main/res/layout/repo_item.xml
@@ -4,7 +4,7 @@
         xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-        <variable name="repo" type="com.example.mvvmbeginner.pojos.Repo"/>
+        <variable name="repo" type="com.example.mvvmbeginner.data.models.Repo"/>
     </data>
 
     <androidx.cardview.widget.CardView
