--- a/app/src/main/res/layout/repo_fragment.xml
+++ b/app/src/main/res/layout/repo_fragment.xml
@@ -6,10 +6,11 @@
     <data>
 
         <import type="android.view.View" />
+        <import type="com.example.mvvmbeginner.data.models.Status"/>
 
         <variable
-                name="repoViewModel"
-                type="com.example.mvvmbeginner.viewmodels.RepoViewModel" />
+                name="resource"
+                type="com.example.mvvmbeginner.data.models.Resource" />
 
     </data>
 
@@ -58,7 +59,7 @@
                 android:id="@+id/progressBar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:visibleGone="@{repoViewModel.isLoading}"
+                app:visibleGone="@{resource.status == Status.LOADING}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
